--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -229,5 +229,8 @@
     "No experience, but I have passed the QA courses": "Опыта нет, но я прошел курсы QA",
     "1-2 years": "1-2 года",
     "3-5 years": "3-5 лет",
-    "5+ years": "5+ лет"
+    "5+ years": "5+ лет",
+    "Select level": "Выберите уровень",
+    "Select frameworks": "Выберите фреймворки",
+    "Select tools": "Выбрать инструменты"
 }
