fix: translation issues

--- a/resources/lang/am.json
+++ b/resources/lang/am.json
@@ -221,7 +221,7 @@
     "1-2 years": "1-2 տարի",
     "3-5 years": "3-5 տարի",
     "5+ years": "5+ տարի",
-    "Select level": "Ընտրեք մակարդակը",
-    "Select frameworks": "Ընտրեք շրջանակներ",
-    "Select tools": "Ընտրեք գործիքներ"
+    "Select level": "Ընտրել մակարդակ",
+    "Select frameworks": "Ընտրել ֆրեյմվորք",
+    "Select tools": "Ընտրել գորիծիքամիջոց"
 }
