--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -230,7 +230,7 @@
     "1-2 years": "1-2 года",
     "3-5 years": "3-5 лет",
     "5+ years": "5+ лет",
-    "Select level": "Выберите уровень",
-    "Select frameworks": "Выберите фреймворки",
+    "Select level": "Выбрать уровень",
+    "Select frameworks": "Выбрать фреймворки",
     "Select tools": "Выбрать инструменты"
 }
