translated privacy policy message

--- a/resources/lang/am.json
+++ b/resources/lang/am.json
@@ -223,5 +223,11 @@
     "5+ years": "5+ տարի",
     "Select level": "Ընտրել մակարդակ",
     "Select frameworks": "Ընտրել ֆրեյմվորք",
-    "Select tools": "Ընտրել գորիծիքամիջոց"
+    "Select tools": "Ընտրել գորիծիքամիջոց",
+
+    " Privacy Policy": " Գաղտնիության քաղաքականություն",
+    "Copyright © 2021 Tesvan LLC. All rights reserved.": "Copyright © 2021 Tesvan ՍՊԸ։ Բոլոր իրավունքները պաշտպանված են",
+    "I have read and agreed to the ": "Ես համաձայն եմ ",
+    "Privacy Policy": "Գաղտնիության քաղաքականությանը",
+    ".": " "
 }
