--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -232,5 +232,11 @@
     "5+ years": "5+ лет",
     "Select level": "Выбрать уровень",
     "Select frameworks": "Выбрать фреймворки",
-    "Select tools": "Выбрать инструменты"
+    "Select tools": "Выбрать инструменты",
+
+    " Privacy Policy": " Политика конфиденциальности",
+    "Copyright © 2021 Tesvan LLC. All rights reserved.": "Copyright © 2021 Tesvan ООО. Все права защищены.",
+    "I have read and agreed to the ": "Я согласен с ",
+    "Privacy Policy": "Политикой конфиденциальности",
+    ".": " "
 }
