fixed Show more btn

--- a/resources/lang/am.json
+++ b/resources/lang/am.json
@@ -229,5 +229,7 @@
     "Copyright © 2021 Tesvan LLC. All rights reserved.": "Copyright © 2021 Tesvan ՍՊԸ։ Բոլոր իրավունքները պաշտպանված են",
     "I have read and agreed to the ": "Ես համաձայն եմ ",
     "Privacy Policy": "Գաղտնիության քաղաքականությանը",
-    ".": " "
+    ".": " ",
+
+    "Show More": "Ցույց Տալ Ավելին"
 }
